--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -8,3 +8,6 @@ severity = 4
 [-ValuesAndExpressions::ProhibitCommaSeparatedStatements]
 
 [-Modules::ProhibitAutomaticExportation]
+
+[Variables::RequireLocalizedPunctuationVars]
+allow = %SIG %ENV
